--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "the-blog",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.16"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -22,10 +25,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
